--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,8 @@ Thumbs.db
 .env.development.local
 .env.test.local
 .env.production.local
+.venv/
+venv/
 
 ########################################
 # Frontend (React/Node)
