--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-markdown": "^10.1.0",
+    "react-router-dom": "^6.28.0",
     "react-scripts": "5.0.1",
     "react-syntax-highlighter": "^15.6.6",
     "remark-gfm": "^4.0.1",
